EDM-2871: api-server WIP
